--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(BEM/Closet/shoes.css);
-@import url(BEM/Closet/closet.css);
-@import url(BEM/Closet/shirt.css);
-@import url(BEM/Closet/pants.css);
+@import url(/Closet/shoes.css);
+@import url(/Closet/closet.css);
+@import url(/Closet/shirt.css);
+@import url(/Closet/pants.css);
